--- a/src/components/equip/style.css
+++ b/src/components/equip/style.css
@@ -2,6 +2,10 @@
     width: 158.28px;
     height: 158.28px;
     border-radius: 134px;
+
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 .user-box{
