--- a/src/components/info/style.css
+++ b/src/components/info/style.css
@@ -1,15 +1,29 @@
 .info{
     position: absolute;
-    margin-top: 20px;
+    margin-top: 150px;
     width: 100%;
-    height: 621px;
     left: 0px;
-    background-image: url("img/download2.png");
-    background-repeat: no-repeat;
-
-    display: flex;
-    align-items: center;
+  
 }
+
+.smartphone{
+ position: absolute;
+ margin-top: 120px;
+  margin-left: 862.01px;
+}
+
+
+.cuch{
+  margin-top:55px;
+  position: absolute;
+  width: 100% ;
+  height: 621px;
+  left: 0px;
+
+  z-index:0;
+  
+}
+
 
 .name-logo{
     color:#0DC78B;
@@ -22,7 +36,5 @@
   }
 
 @media screen and (min-width: 1434px){
-  .info{
-    background: #0C29D0 !important;
-  }
+ 
 }
