--- a/src/components/technologies/style.css
+++ b/src/components/technologies/style.css
@@ -5,6 +5,10 @@
    
 }
 
+.img-tech{
+   border: 1px solid black;
+}
+
 .title{
     font-weight: bold;
     font-size: 25px;
@@ -22,9 +26,9 @@
 .box{
     
     width: 170px;
-    padding: 0px 20px;
-    height: 200px;
-    box-sizing: border-box;
+    
+    height: 150px;
+ 
     box-shadow: inset 0px 3px 3px rgba(0, 0, 0, 0.1);
 
 }
